# neatposts

./: .gitignore  README.md  layout.html  md_to_html.py  pyproject.toml  setup.cfg
src/neatdocs/: README.md  __main__.py  filltempl.py  indexgen.py
src/neatposts/: __main__.py  converter.py  filltempl.py  fontsmngr.py  layout.css  rendermath.py
src/text2chtml/: README.md
src/webdoc/: __main__.py  layout.css
